--- a/src/public/css/list.css
+++ b/src/public/css/list.css
@@ -34,8 +34,25 @@
     color: red;
 }
 
+.sold-label {
+    font-weight: bold;
+    position: absolute;
+    background-color: rgba(185, 184, 184, 0.7);
+    color: #fff;
+    font-size: 50px;
+    padding: 170px 10px;
+    width: 410px;
+    height: 410px;
+    text-align: center;
+}
+
 @media (min-width: 1400px) and (max-width: 1540px) {
     .list__image img {
+        width: 405px;
+        height: 405px;
+    }
+
+    .sold-label {
         width: 405px;
         height: 405px;
     }
@@ -45,5 +62,12 @@
     .list__image img {
         width: 310px;
         height: 310px;
+    }
+
+    .sold-label {
+        padding: 130px 10px;
+        width: 310px;
+        height: 310px;
+        font-size: 40px;
     }
 }
