--- a/src/public/css/profile.css
+++ b/src/public/css/profile.css
@@ -40,7 +40,7 @@
 
 .user__img {
     display: flex;
-    background-color: rgba(144, 144, 144, 0.322);
+    background-color: rgba(121, 121, 121, 0.404);
     width: 180px;
     height: 180px;
     border-radius: 50%;
@@ -81,8 +81,25 @@
     color: red;
 }
 
+.sold-label {
+    font-weight: bold;
+    position: absolute;
+    background-color: rgba(185, 184, 184, 0.7);
+    color: #fff;
+    font-size: 50px;
+    padding: 170px 10px;
+    width: 410px;
+    height: 410px;
+    text-align: center;
+}
+
 @media (min-width: 1400px) and (max-width: 1540px) {
     .profile__image img {
+        width: 405px;
+        height: 405px;
+    }
+
+    .sold-label {
         width: 405px;
         height: 405px;
     }
@@ -92,5 +109,12 @@
     .profile__image img {
         width: 310px;
         height: 310px;
+    }
+
+    .sold-label {
+        padding: 130px 10px;
+        width: 310px;
+        height: 310px;
+        font-size: 40px;
     }
 }
