--- a/src/public/css/details.css
+++ b/src/public/css/details.css
@@ -16,6 +16,12 @@
     padding: 50px 15px 30px 30px;
 }
 
+.comment img {
+    width:40px;
+    height:40px;
+    border-radius:50%;
+    background-color: rgba(121, 121, 121, 0.404);
+}
 .form__group input {
     width: 100%;
     border: none;
