--- a/src/public/css/chat.css
+++ b/src/public/css/chat.css
@@ -41,24 +41,6 @@
     justify-content: space-between;
 }
 
-#preview-wrapper {
-    width: 150px;
-    height: 150px;
-    border-radius: 50%;
-    background-color: #ccc;
-    /* 灰色 */
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    overflow: hidden;
-}
-
-#image-preview {
-    max-width: 100%;
-    max-height: 100%;
-    display: none;
-    /* 初期状態では非表示 */
-}
 .heading_img {
     height: 60px;
     width: 60px;
@@ -122,7 +104,7 @@
 }
 
 .chat {
-    max-height: 450px;
+    max-height: 490px;
     overflow-y: auto;
     padding: 16px;
     scroll-behavior: smooth;
@@ -137,6 +119,7 @@
     left: 18%;
     background: #fff;
     z-index: 1000;
+    align-items: center;
 }
 
 .form__group {
@@ -171,7 +154,6 @@
 
 .text {
     margin-top: 20px;
-    
 }
 
 .profile_image {
@@ -203,7 +185,7 @@
 
 .chat-content {
     background-color: #e1e0e0c8;
-    padding: 10px;
+    padding: 8px 10px;
     margin: 12px 0;
     border-radius: 3px;
     width: 35%;
@@ -317,6 +299,14 @@
     padding: 12px;
 }
 
+.form__btn {
+    width: 100%;
+}
+
+.form_group {
+    width: 3%;
+}
+
 @media (min-width: 1400px) and (max-width: 1540px) {
     .other-transactions {
         font-size: 35px;
@@ -381,7 +371,7 @@
     }
 
     .content {
-        width: 380px;
+        width: 100%;
     }
 
     .modal__inner {
@@ -408,5 +398,17 @@
     .item-link {
         margin: 30px 20px;
         font-size: 18px;
+    }
+
+    .form__group {
+        width: 71%;
+    }
+
+    .form_group {
+        width: 7%;
+    }
+
+    .form__img {
+        width: 24%;
     }
 }
